# quake3.gpl.old

./: CMakeLists.txt  notes.txt
code/: CMakeLists.txt
code/botlib/: CMakeLists.txt
code/cgame/: CMakeLists.txt
code/game/: CMakeLists.txt  g_misc.c  g_public.h
code/q3_ui/: CMakeLists.txt
code/qcommon/: qcommon.h
code/renderer/: CMakeLists.txt  tr_backend.c  tr_cmds.c  tr_init.c  tr_local.h  tr_main.c  tr_mirror.cc  tr_scene.c  tr_subview.cc
code/server/: sv_game.c
