ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
cmake_minimum_required(VERSION 2.6)
PROJECT(Quake3)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_SUBDIRECTORY(code)
ADD_SUBDIRECTORY(code/botlib)
ADD_SUBDIRECTORY(code/renderer)
ADD_SUBDIRECTORY(code/cgame)
ADD_SUBDIRECTORY(code/game)
ADD_SUBDIRECTORY(code/q3_ui)
