SET(SRCS 
  #../game/bg_lib.c
  ../game/bg_misc.c
  ../game/bg_pmove.c
  ../game/bg_slidemove.c
  cg_consolecmds.c
  cg_draw.c
  cg_drawtools.c
  cg_effects.c
  cg_ents.c
  cg_event.c
  cg_info.c
  cg_localents.c
  cg_main.c
  cg_marks.c
  #cg_newDraw.c
  cg_players.c
  cg_playerstate.c
  cg_predict.c
  cg_scoreboard.c
  cg_servercmds.c
  cg_snapshot.c
  cg_syscalls.c
  cg_view.c
  cg_weapons.c
  ../game/q_math.c
  ../game/q_shared.c
  ../ui/ui_shared.c
  ../game/bg_public.h
  cg_local.h
  cg_public.h
  ../game/q_shared.h
  ../game/surfaceflags.h
  cgame.def)
ADD_LIBRARY(cgamex86 SHARED ${SRCS})
